Adds example to ensure typescript, material-ui, and react are building properly
- Implements material design UI "Getting started" example
- The simple example ensures all parts are working together and building properly:
typescript, material UI, react
- material-ui "getting started" docs: https://material-ui.com/getting-started/installation/
- Parcel typescript config docs: https://parceljs.org/typeScript.html
- Using font roboto as recommended in material-ui docs, for now
- Begin using "gm--" (for Gemmy) prefix for namespacing througout app

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
 <head>
-  <title>Ruby Gems search app</title>
-  <link rel="stylesheet" href="./src/base.css" />
+  <title>Gemmy - search and store your ruby gems</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" />
 </head>
 <body>
-  <h1 class="big-lorem-ipsum">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor...</h1>
+  <div id="gm--app"></div>
+  <script src="./src/index.tsx"></script>
 </body>
 </html>
